--- a/food-app/src/App.css
+++ b/food-app/src/App.css
@@ -1,13 +1,15 @@
 body{
-    background-color: #fff7ec; /*fff7ec*/
+    background-color: #fceedb; /*fff7ec*/
 }
 
 nav{
-    background-color: #2c3e50;
+    background-color: #7a8c74;
 }
+
+
 #happy-people-image{
-    top: 10px; /* Aligns the image to the top */
-    left: 10px; /* Adds margin from the left */
+    margin-top: 50px; /* Aligns the image to the top */
+    margin-left: 50px; /* Adds margin from the left */
     width: 40vw; /* Makes the image's width 90% of the viewport width */
     height: auto; /* Ensures the aspect ratio is maintained */
     max-height: 90vh; /* Ensures the image doesn't exceed 90% of the viewport height */
