--- a/food-app/src/App.css
+++ b/food-app/src/App.css
@@ -15,7 +15,7 @@ nav{
     border-style: dashed;
 }
 .motto-container p{
-    color: red;
+    color: black;
     font-size: 90px;
 
     display: flex;
@@ -56,10 +56,29 @@ nav{
 }
 
 #group-of-people-image{
-    width: 50vw;
+    margin: 5vw;
+    width: 40vw; /* Makes the image's width 90% of the viewport width */
+    height: auto; /* Ensures the aspect ratio is maintained */
+    max-height: 90vh; /* Ensures the image doesn't exceed 90% of the viewport height */
+    object-fit: contain; /* Ensures the image scales properly within its container */
 }
+
 #group-of-people-container{
     width: 50vw;
+    
+}
+
+#mission-statement-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#mission-statement-container p{
+    margin-bottom: 5%;
+    margin-left: 5%;
+    margin-right: 5%;
+    font-size: 20px;
+    color: black;
 }
 
 
@@ -69,10 +88,16 @@ nav{
     .motto-container p{
         font-size: 65px;
     }
+    #mission-statement-container p{
+        font-size: 18px;
+    }
 }
 
 @media (max-width: 900px){
     .motto-container p{
         font-size: 40px;
+    }
+    #mission-statement-container p{
+        font-size: 10px;
     }
 }
