--- a/food-app/src/pages/Home.css
+++ b/food-app/src/pages/Home.css
@@ -15,18 +15,18 @@ nav{
     align-items: center;
     width: 50vw;
 
-    border-style: dashed;
+    /* border-style: dashed; */
 }
 .motto-container p{
     color: black;
-    font-size: 90px !important;
+    font-size: 90px;
 
     display: flex;
     margin: 5vw;
 }
 
 .happy-people-image-container{
-    border-style: dashed;
+    /* border-style: dashed; */
     width: 50vw;
     display: flex;
     justify-content: center;
@@ -43,7 +43,7 @@ nav{
 .row-1-container{
     width: 100%;
     height: 80vh;
-    border-style: dashed;
+    /* border-style: dashed; */
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -52,7 +52,7 @@ nav{
 .row-2-container{
     width: 100%;
     height: 80vh;
-    border-style: dashed;
+    /* border-style: dashed; */
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -103,4 +103,9 @@ nav{
     #mission-statement-container p{
         font-size: 10px;
     }
+}
+
+.container {
+    max-width: 100% !important;
+    width: 100% !important;
 }
