--- a/food-app/src/pages/Home.css
+++ b/food-app/src/pages/Home.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+
+
+
 body{
     background-color: #fceedb; /*fff7ec*/
 }
@@ -6,7 +10,7 @@ nav{
     background-color: #7a8c74;
 }
 .nav-link:hover {
-    color: #dc3012; /* Change to desired hover color (e.g., tomato) */
+    color: white; /* Change to desired hover color (e.g., tomato) */
 }
 
 .motto-container{
@@ -19,10 +23,18 @@ nav{
 }
 .motto-container p{
     color: black;
-    font-size: 90px;
+    font-size: 70px;
+    font-family: 'Montserrat', sans-serif;
+    background: #7a8c74;
 
     display: flex;
     margin: 5vw;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 50px;
+    padding-right: 30px;
+    border: 2px solid;
+    border-radius: 8px;
 }
 
 .happy-people-image-container{
@@ -37,7 +49,8 @@ nav{
     width: 40vw; /* Makes the image's width 90% of the viewport width */
     height: auto; /* Ensures the aspect ratio is maintained */
     max-height: 90vh; /* Ensures the image doesn't exceed 90% of the viewport height */
-    object-fit: contain; /* Ensures the image scales properly within its container */
+    border: 4px solid;
+    border-radius: 8px;
 }
 
 .row-1-container{
@@ -63,7 +76,8 @@ nav{
     width: 40vw; /* Makes the image's width 90% of the viewport width */
     height: auto; /* Ensures the aspect ratio is maintained */
     max-height: 90vh; /* Ensures the image doesn't exceed 90% of the viewport height */
-    object-fit: contain; /* Ensures the image scales properly within its container */
+    border: 4px solid;
+    border-radius: 8px;
 }
 
 #group-of-people-container{
@@ -77,11 +91,19 @@ nav{
     align-items: center;
 }
 #mission-statement-container p{
-    margin-bottom: 5%;
+    margin-bottom: 0%;
     margin-left: 5%;
     margin-right: 5%;
-    font-size: 20px;
+    font-family: 'Montserrat', sans-serif;
+    background: white;
+    font-size: 19px;
     color: black;
+    padding-top: 40px;
+    padding-bottom: 30px;
+    padding-left: 50px;
+    padding-right: 30px;
+    border: 2px solid;
+    border-radius: 8px;
 }
 
 
