--- a/food-app/src/pages/Home.css
+++ b/food-app/src/pages/Home.css
@@ -3,7 +3,7 @@
 
 
 body{
-    background-color: #fceedb; /*fff7ec*/
+    background-color: #a9b88c; /*fff7ec*/
 }
 
 nav{
@@ -22,10 +22,10 @@ nav{
     /* border-style: dashed; */
 }
 .motto-container p{
-    color: black;
+    color: white;
     font-size: 70px;
     font-family: 'Montserrat', sans-serif;
-    background: #7a8c74;
+    background: hsl(139, 22%, 51%);
 
     display: flex;
     margin: 5vw;
@@ -33,7 +33,7 @@ nav{
     padding-bottom: 50px;
     padding-left: 50px;
     padding-right: 30px;
-    border: 2px solid;
+    border: 2px solid black;
     border-radius: 8px;
 }
 
@@ -76,7 +76,7 @@ nav{
     width: 40vw; /* Makes the image's width 90% of the viewport width */
     height: auto; /* Ensures the aspect ratio is maintained */
     max-height: 90vh; /* Ensures the image doesn't exceed 90% of the viewport height */
-    border: 4px solid;
+    border: 4px solid #000000;
     border-radius: 8px;
 }
 
@@ -102,7 +102,7 @@ nav{
     padding-bottom: 30px;
     padding-left: 50px;
     padding-right: 30px;
-    border: 2px solid;
+    border: 2px solid white;
     border-radius: 8px;
 }
 
